{
  "sourceLanguage" : "en",
  "strings" : {
    "🎨 Nuevo Dibujo" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "🎨 New doodle"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "🎨 Nouveau dessin"
          }
        }
      }
    },
    "AirDoodle" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "AirDoodle 🇺🇸"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "needs_review",
            "value" : "AirDessin 🇫🇷"
          }
        }
      }
    },
    "Borrador" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Eraser"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Gomme"
          }
        }
      }
    },
    "Borrar Dibujo" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Clean canvas"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Supprimer le dessin"
          }
        }
      }
    },
    "Cancelar" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Annuler"
          }
        }
      }
    },
    "Cargar escena" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Load scene"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Porter scène"
          }
        }
      }
    },
    "Círculo" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Circle"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cercle"
          }
        }
      }
    },
    "Color" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Color"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Couleur"
          }
        }
      }
    },
    "Continuar" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Continue"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Continuer"
          }
        }
      }
    },
    "Gracias, cámara habilitada." : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Thank you, camera has been enabled."
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Merci pour mon accès à ta caméra!!"
          }
        }
      }
    },
    "Gracias, galería habilitada." : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Thank you, gallery access has been granted."
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Merci pour mon accès à ta galerie!!"
          }
        }
      }
    },
    "Grosor" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Weight"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Épaisseur"
          }
        }
      }
    },
    "Guardar" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Garder"
          }
        }
      }
    },
    "Guardar escena" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save scene"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Garder scène"
          }
        }
      }
    },
    "Herramienta" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tool"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Outil"
          }
        }
      }
    },
    "Importar AirDoodle" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Import AirDoodle"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Importer un AirDessin"
          }
        }
      }
    },
    "Ingresa un nuevo nombre para tu AirDoodle" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enter a new name for your AirDoodle"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Quel est le nom de ce AirDessin?"
          }
        }
      }
    },
    "Lápiz" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pencil"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Crayon"
          }
        }
      }
    },
    "Línea" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Line"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Doubler"
          }
        }
      }
    },
    "Nombre de la escena" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Scene name"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nom du la scène"
          }
        }
      }
    },
    "Nuevo nombre" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "New name"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nouveau nomme"
          }
        }
      }
    },
    "Ocultar UI" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hide UI"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Masquer l'interface utilisateur"
          }
        }
      }
    },
    "Permiso para la cámara necesario." : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Camera access is needed."
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Je veux te voir."
          }
        }
      }
    },
    "Permiso para la galería necesario." : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Gallery access is needed."
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Je veux voir ta galerie."
          }
        }
      }
    },
    "Por favor, acepta los permisos de tu cámara y galería para continuar." : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Please accept the permissions for camera and gallery."
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Veuillez accepter les autorisations de l'appareil photo et de la galerie."
          }
        }
      }
    },
    "Renombrar AirDoodle" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Rename AirDoodle"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Renommer AirDessin"
          }
        }
      }
    },
    "saveddoodles" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "🌠 Saved doodles"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "🌠 Dessins enregistrés"
          }
        }
      }
    },
    "Solicitar acceso a la cámara" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ask for camera permission"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Permets-moi de te voir"
          }
        }
      }
    },
    "Solicitar acceso a la galería" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ask for gallery permission"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Permets-moi de voir ta galerie."
          }
        }
      }
    },
    "Tomar Foto" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Take photo"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Prendre une photo"
          }
        }
      }
    },
    "Tus AirDoodles" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Your AirDoodles"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tes AirDessins"
          }
        }
      }
    }
  },
  "version" : "1.0"
}